--- a/app/globals.css
+++ b/app/globals.css
@@ -3,31 +3,45 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
+  /* Primary */
+  --primary-hue: 32;
+  --primary-saturation: 93%;
+  --primary-lightness: 72%;
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
+  --primary: hsl(
+    var(--primary-hue),
+    var(--primary-saturation),
+    var(--primary-lightness)
+  );
+  --primary-light: hsl(
+    var(--primary-hue),
+    var(--primary-saturation),
+    calc(var(--primary-lightness) + 10%)
+  );
+  --primary-dark: hsl(
+    var(--primary-hue),
+    var(--primary-saturation),
+    calc(var(--primary-lightness) - 10%)
+  );
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
+  /*  Neutral color */
+  --neutral-hue: 0;
+  --neutral-saturation: 0%;
+  --neutral-lightness: 95%;
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+  --neutral: hsl(
+    var(--neutral-hue),
+    var(--neutral-saturation),
+    var(--neutral-lightness)
+  );
+  --neutral-light: hsl(
+    var(--neutral-hue),
+    var(--neutral-saturation),
+    calc(var(--neutral-lightness) + 10%)
+  );
+  --neutral-dark: hsl(
+    var(--neutral-hue),
+    var(--neutral-saturation),
+    calc(var(--neutral-lightness) - 10%)
+  );
 }
