chore: Remove commented out CSS code in globals.css

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -52,7 +52,7 @@
 a:not(a.card) {
   @apply hover:underline hover:underline-offset-4;
 }
-
+/*
 a:not(nav a):not(.button):not(.card) {
   @apply underline underline-offset-4;
-}
+} */
