--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -56,3 +56,7 @@ a:not(a.card) {
 a:not(nav a):not(.button):not(.card) {
   @apply underline underline-offset-4;
 } */
+
+.important {
+  display: none;
+}
