Added tailwind backdrop blur webkit support in CSS file to make the backdrop work on mobile and safari

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -64,3 +64,13 @@ a:not(nav a):not(.button):not(.card) {
 .grecaptcha-badge {
   visibility: hidden;
 }
+
+/* Backdrops for Chrome and Safari on mobile support */
+
+.backdrop-blur-sm {
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness)
+    var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale)
+    var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert)
+    var(--tw-backdrop-opacity) var(--tw-backdrop-saturate)
+    var(--tw-backdrop-sepia);
+}
