--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,3 +74,9 @@ a:not(nav a):not(.button):not(.card) {
     var(--tw-backdrop-opacity) var(--tw-backdrop-saturate)
     var(--tw-backdrop-sepia);
 }
+
+/* Prose styles */
+.prose {
+  max-width: 100%;
+  margin: 0 auto;
+}
