refactor: Update agenda item and blog page layouts and styling to excluse all other text elements

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -76,7 +76,8 @@ a:not(nav a):not(.button):not(.card) {
 }
 
 /* Prose styles */
-.prose {
+.blog .prose,
+.agenda .prose {
   max-width: 100%;
   margin: 0 auto;
 }
